--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@hcode.com.br
+    ServerAdmin herminathor@gmail.com
     DocumentRoot "C:/xampp/htdocs/ecommerce"
     ServerName www.ecommerce.com.br
     ErrorLog "logs/dummy-host2.example.com-error.log"
